# AI_CHATBOT

./: .env.production.example  .env.staging.example  .gitignore  AGENTS.md  CON.md  README.md  SaaS_Feature_Suggestions.md  TODO.md  admin_analytics.md  chat.md  deploy.md  ecosystem.config.js  export_urls.py  hg.txt  kl.md  mn.txt  mongodb_index.json  msg.txt  nginx.conf  package-lock.json  package.json  pl.md  plan.md  plan.txt  pnpm-lock.yaml  profiles.md  pyproject.toml  pyrightconfig.json  schoolservice.md  session_history.md  test_archival.py  test_archival_fix.py  test_context_loss_fix.py  test_e2e.py
.github/workflows/: deploy-staging.yml  deploy.yml
apps/dashboard/: Dockerfile  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/widget/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
backend/: .env.production.example  main.py  requirements.txt  run.py
backend/config/: models.json
backend/controllers/: admin.py  admin_analytics.py  chat.py  conversations.py  crawl.py  faqs.py  knowledge_improvement.py  leads.py  providers.py  school_dashboard.py  sources.py  tenants.py  text_docs.py  visitor_profiles.py
backend/core/: auth.py  config.py  rate_limiter.py  redis.py  schema_validator.py
backend/models/: __init__.py  requests.py  schemas.py  school_data.py  visitor_profile.py
backend/repositories/: conversation_repository.py  crawl_job_repository.py  faq_repository.py  feedback_repository.py  knowledge_gap_repository.py  (+12 more)
sample_data/: school_erp_sample.xlsx
scripts/: seed_school_data.py
(+94 files in other folders)
