[project]
name = "ai-chatbot-widget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "numpy>=2.0.0",
    "langchain-text-splitters>=1.1.2",
    "motor>=3.7.1",
    "openai>=2.38.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymongo>=4.17.0",
    "pymupdf>=1.27.2.3",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "readability-lxml>=0.8.4.1",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.48.0",
    "redis>=8.0.0",
    "websockets>=16.0",
]
